# Bourgenais2015

./: .gitignore  PourAllerPlusLoin.txt  README.md  notes.html
01_PriseEnMain/: Installation.html  Installation.ipynb  Installation.slides.html  Jupyter.ipynb  Jupyter.slides.html
02_1_SimpleITKBasique/: SimpleITK-basique.ipynb  SimpleITK-basique.slides.html
02_1_SimpleITKBasique/.ipynb_checkpoints/: SimpleITK-basique-checkpoint.ipynb
02_2_SimpleITKFiltres/: CE_1.tif  CE_2.tif  boats.tif
02_3_SimpleITKRecalage/: SimpleITK-recalage.ipynb  SimpleITK-recalage.slides.html  myshow.py
02_4_Occiput/: reconstructionOcciput.io.ipynb  reconstructionOcciput.io.slides.html
04_SlicerPrimer/: SlicerPrimer.html  SlicerPrimer.ipynb
05_slicerRecalage/: Slicer-recalage.ipynb  recalageSlicer.html
06_slicerDeveloppement/: 3DSlicerScripting.ipynb  3DSlicerScripting.slides.html
PRESENTATIONS/Jeudi/Keosys/: PERCIST-FR.pptx
SlicerRT/: nbSlicerRT.ipynb  nbSlicerRT.slides.html
SlicerRT/RPAH2/CBCT1_ANON/: CT.2.16.840.1.114337.129041171880.5863.1441801907.0.dcm  CT.2.16.840.1.114337.129041171880.5863.1441801907.1.dcm  CT.2.16.840.1.114337.129041171880.5863.1441801907.2.dcm  CT.2.16.840.1.114337.129041171880.5863.1441801907.3.dcm  CT.2.16.840.1.114337.129041171880.5863.1441801907.4.dcm  CT.2.16.840.1.114337.129041171880.5863.1441801907.5.dcm  CT.2.16.840.1.114337.129041171880.5863.1441801907.6.dcm  (+59 more)
corrections/: SimpleITK-recalage.html  reconstructionOcciput.io.html
monExtensionDeLaMort/: CMakeLists.txt  moduleUn.back.py
monExtensionDeLaMort/moduleUn/: moduleUn.py
(+219 files in other folders)
